# pkg-mrs

./: .nvim.lua  CLAUDE.md  Cargo.toml  Justfile  azure-pipelines.yml
src/: alist.rs  cli.rs  config.rs  main.rs  sync.rs
src/sources/: github.rs  homebrew.rs  mise.rs  mod.rs  scoop.rs
src/utils/: http.rs  mirror.rs  mod.rs  version.rs
