[package]
name = "pkg-mrs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
regex = "1"
percent-encoding = "2"
keepass = "0.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
